syntax = "proto3";

package krathub.service.v1;

import "google/api/annotations.proto";

import "test/service/v1/test.proto";

option go_package = "github.com/horonlee/krathub/api/gen/go/krathub/service/v1;krathubv1";

// Test HTTP 服务 - 用于 OpenAPI 生成
service TestService {
  rpc Test(test.service.v1.TestRequest) returns (test.service.v1.TestResponse) {
    option (google.api.http) = {
      post: "/v1/test/test"
      body: "*"
    };
  }
  
  rpc PrivateTest(test.service.v1.PrivateTestRequest) returns (test.service.v1.PrivateTestResponse) {
    option (google.api.http) = {
      post: "/v1/test/private"
      body: "*"
    };
  }
}
